🐛 FIX: breaking whitespace

--- a/src/scss/blocks/_time.scss
+++ b/src/scss/blocks/_time.scss
@@ -23,7 +23,7 @@
 
     .icon {
       margin-block-start: 2px;
-      margin-inline-end: 1rem;
+      margin-inline-end: 0.5rem;
     }
   }
 
